<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentLivro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LivroFragment">


    <TextView
        android:id="@+id/tvFragLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/livro"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/tvListarLivro"
        android:layout_width="310dp"
        android:layout_height="125dp"
        android:scrollbars="vertical"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <EditText
        android:id="@+id/inEdicaoLivro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/edicao"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="@+id/btnDeleteLivro"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnInsertLivro"
        app:layout_constraintTop_toBottomOf="@+id/inNomeLivro" />

    <Button
        android:id="@+id/btnUpdateLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="23dp"
        android:text="@string/btnUpdate"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteLivro"
        app:layout_constraintStart_toEndOf="@+id/btnInsertLivro"
        app:layout_constraintTop_toBottomOf="@+id/inEdicaoLivro" />

    <Button
        android:id="@+id/btnDeleteLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="14dp"
        android:text="@string/btnDelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnUpdateLivro"
        app:layout_constraintTop_toBottomOf="@+id/inEdicaoLivro" />

    <Button
        android:id="@+id/btnInsertLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btnInsert"
        app:layout_constraintEnd_toStartOf="@+id/btnUpdateLivro"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inEdicaoLivro" />

    <Button
        android:id="@+id/btnBuscarLivro"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="21dp"
        android:text="@string/btnBuscar"
        app:layout_constraintEnd_toStartOf="@+id/btnListLivro"
        app:layout_constraintStart_toEndOf="@+id/inCodLivro"
        app:layout_constraintTop_toBottomOf="@+id/tvFragLivro" />

    <EditText
        android:id="@+id/inCodLivro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarLivro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFragLivro" />

    <Button
        android:id="@+id/btnListLivro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="41dp"
        android:text="@string/btnListAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBuscarLivro"
        app:layout_constraintTop_toBottomOf="@+id/tvFragLivro" />

    <EditText
        android:id="@+id/inNomeLivro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/inEdicaoLivro"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/inEdicaoLivro"
        app:layout_constraintTop_toBottomOf="@+id/inCodLivro" />

    <EditText
        android:id="@+id/inQtdPagLivro"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/qtd_pag"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inNomeLivro" />

    <EditText
        android:id="@+id/inISBNLivro"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/isbn"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inQtdPagLivro" />
</androidx.constraintlayout.widget.ConstraintLayout>
